-Added a better sound effect for the aortic eel's charging
-Sad ghosts can no longer go through blocks
-Spooky mod friendly critters now only take up half of an npc slot like vanilla critters
-Zomboid necromancers now absorb the souls of undead enemies killed near them, and can use those souls to summon a phantom enemy. The more souls it absorbs before summoning the enemy, the stronger it will be


Miscellaneous:

-Resprited a bunch of grass and other blocks in each spooky mod biome
-The underground spooky forest cabin chests are no longer locked
-Spooky forest now generates with the opposite tier ore of what vanilla has, instead of always having the original four ores (for example, if your world generates with gold ore then the spooky forest will have platinum ore)
-Increased the amount of tungsten/iron bars and potions found in the cemetery house chests
-Chests in the second layer of the catacombs will now always generate with adamantite/titanium bars in them instead of cobalt/palladium/mythril/orichalcum bars
-Removed cobwebs and pumpkin seeds from the cemetery house chests and the spooky forest cabin chests loot
-Increased the chance of a giant glowshroom tree to randomly grow on mushroom moss
-Gilded bricks now produce gold dust when broken instead of stone dust
-Catacomb flooring bricks now produce bone dust when broken instead of stone dust
-Spooky mod config menu now uses less blinding colors for the background and each individual config bar
-Spooky mod screen shake intensity slider now has a much higher maximum value, increased from a maximum of 2x extra screenshake to 5x extra screenshake (I think its pretty funny)
-Spooky mod's primitive trails are now more pixelated to fit with terraria's style a bit more
-The rare golden moyai now drops an item when broken, allowing you to place it anywhere you'd like
-


Removals:

-Removed the old wood key from the mod due to the old wood cabin chests no longer being locked




~BUGS AND OTHER FIXES~

