@@ -11,14 +11,12 @@ using Spooky.Core;
 namespace Spooky.Content.Items.Costume
 {
 	[AutoloadEquip(EquipType.Head)]
-	public class DylanDoeHead : ModItem, IHelmetGlowmask
+	public class DylanDoeHead : ModItem
 	{
-		public string GlowmaskTexture => "Spooky/Content/Items/Costume/DylanDoeHead_Glow";
-
 		public override void SetDefaults()
 		{
-			Item.width = 24;
-			Item.height = 28;
+			Item.width = 30;
+			Item.height = 30;
 			Item.vanity = true;
 			Item.rare = ItemRarityID.Quest;
 			Item.value = Item.buyPrice(gold: 10);
