@@ -38,7 +38,7 @@ namespace Spooky.Content.Items.SpiderCave
 
         public override bool CanUseItem(Player player)
 		{
-			return player.ownedProjectileCounts[Item.shoot] < 1;
+			return player.ownedProjectileCounts[ModContent.ProjectileType<VenomHarpoonProj>()] < 1;
 		}
 
         public override bool Shoot(Player player, EntitySource_ItemUse_WithAmmo source, Vector2 position, Vector2 velocity, int type, int damage, float knockback)
